--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
     "@strapi/plugin-graphql": "^4.0.0",
-    "lodash.set": "^4.3.2",
-    "@strapi/strapi": "4.4.7",
-    "@strapi/plugin-users-permissions": "4.4.7",
     "@strapi/plugin-i18n": "4.4.7",
-    "better-sqlite3": "7.4.6"
+    "@strapi/plugin-users-permissions": "4.4.7",
+    "@strapi/strapi": "4.4.7",
+    "better-sqlite3": "7.4.6",
+    "lodash.set": "^4.3.2",
+    "pg-connection-string": "^2.5.0"
   },
   "name": "backend",
   "private": true,
@@ -17,7 +18,6 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "author": {
     "name": "A Strapi developer"
   },
@@ -30,5 +30,8 @@
     "node": ">=14.19.1 <=18.x.x",
     "npm": ">=6.0.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "pg": "^8.8.0"
+  }
 }
