Cloudinary set up

--- a/.env
+++ b/.env
@@ -4,4 +4,7 @@ APP_KEYS=l11p7FbNzHVbRggQUpt44w==,VvcTZObHTljQXnYiJmVlGw==,I9Jd0yJQd9TZTqrrb8BQw
 API_TOKEN_SALT=D/WFQg8ML7KXDKPSTUGwxA==
 ADMIN_JWT_SECRET=lDIH/kMxlCW2v/ISS2kqCw==
 JWT_SECRET=0R0VTq5Mc77g6vNGwkdWPg==
+CLOUDINARY_NAME=ddkohg0jy
+CLOUDINARY_KEY=173886383578291
+CLOUDINARY_SECRET=2ieHY1Flk6hm6XQ4fByXwr0frWg
 # 
