Cloudinary set up

--- a/.env
+++ b/.env
@@ -7,4 +7,5 @@ JWT_SECRET=0R0VTq5Mc77g6vNGwkdWPg==
 CLOUDINARY_NAME=ddkohg0jy
 CLOUDINARY_KEY=173886383578291
 CLOUDINARY_SECRET=2ieHY1Flk6hm6XQ4fByXwr0frWg
-# 
+# check if cloudinary connection works
+# curl https://173886383578291:2ieHY1Flk6hm6XQ4fByXwr0frWg@api.cloudinary.com/v1_1/ddkohg0jy/resources/image
